1). I Add new json row as [MilkLocalSeverPort] to hold local server port state if defualt port 1520  was close/occupied 2). Added a callable function [setLocalServerPort] that updated MilkCoinfig.json through input argument 3). Added new Variable [milkConfigFile] that hold Milk Config file 4). Replaced all MilkConfig.json hard coded name by [milkConfigFile]

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
-# Milk gitignore file
+# Milk : git directory ignore
 /testlab
 /versions/php/php*
 /packages/php*
 
+
+
+# Milk : git file ignore
+/MilkConfigTest.json
