--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # Milk : git directory ignore
-/testlab
-/versions/php/php*
-/packages/php*
+/_Testlab
+/Versions/php/php*
+/Packages/php*
 
 
 
 # Milk : git file ignore
-/MilkConfigTest.json
-/MilkCleanEnv.sh
+/_MilkConfigTest.json
+/_MilkCleanEnv.sh
