Revert "A Bit Cleanup and refactoring directories [🐍️ case -> 🐪️ case]"
This reverts commit 9fe86a0832dc9c11b1cab48d9575bb63c9081888.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # Milk : git directory ignore
-/_Testlab
-/Versions/php/php*
-/Packages/php*
+/testlab
+/versions/php/php*
+/packages/php*
 
 
 
 # Milk : git file ignore
-/_MilkConfigTest.json
-/_MilkCleanEnv.sh
+/MilkConfigTest.json
+/MilkCleanEnv.sh
